Implementa RoleAssignerTest.assignRoles
Soluciona UnsupportedException en RoleAssigner.assignRole debido a intento de mutar la lista inmutable (creada a partir de List.of())